<resources>
    <string name="app_name">Kungry</string>

    <string name="bottom_nav_map_title">Map</string>
    <string name="bottom_nav_restaurant_title">Restaurants</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="connection_label">Connexion</string>
    <string name="register_label">Inscription</string>
    <string name="account_label">Mon Compte</string>
    <string name="form_first_name">Prénom</string>
    <string name="form_last_name">Nom</string>
    <string name="form_email">Courriel</string>
    <string name="form_password">Mot de passe</string>
    <string name="account_eval">Nombre d\'évaluations attribuées</string>
    <string name="account_disconnect">Déconnexion</string>
    <string name="background_description">Background Image</string>
    <string name="open_hours">Heures d\'ouverture</string>

    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>

    <string name="token_shared_pref">token</string>

    <string name="switch_register_button">Nouveau avec Kungry ?</string>
    <string name="switch_login_button">Déjà abonnée?</string>

    <string name="connect_button">Me Connecter</string>
    <string name="register_button">M\'inscrire</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo_kungry">Logo Kungry</string>

    <!--    Review creation-->
    <string name="review_creation_submit">SOUMETTRE</string>
    <string name="review_creation_rate_title">Évaluation</string>
    <string name="review_creation_comment_title">Commentaire</string>
    <string name="review_creation_photo_title">Ajouter une photo</string>
    <string name="review_creation_falcultative">(Facultatif)</string>
    <string name="title_activity_review_list">ReviewListActivity</string>

    <!--    Review creation popup-->
    <string name="review_creation_login_popup_button">CONNEXION</string>
    <string name="review_creation_login_popup_text">Pour laisser une évaluation , connectez-vous.</string>
    <string name="review_creation_popup_button">Laisser une évaluation</string>

    <!--    Review list-->
    <string name="review_list_title">Évaluations</string>


    <string name="title_activity_maps">Map</string>

    <string name="snackbar_title">Un petit creux?</string>
    <string name="snackbar_description">Sélectionnez une épingle afin d\'obtenir plus de détails sur ce restaurant.</string>
    <string name="location">Lieu</string>
    <string name="see_more">Voir plus d\'évaluations</string>

</resources>

