<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.profile.LoginFragment">

    <ImageView
        android:id="@+id/form_background"
        android:contentDescription="@string/background_description"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/form_background"
        app:layout_constraintEnd_toEndOf="@+id/form_background"
        app:layout_constraintStart_toStartOf="@+id/form_background"
        app:layout_constraintTop_toTopOf="@+id/form_background"
        app:layout_constraintVertical_bias="0.2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:src="@drawable/ic_kungry_kangaroo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/futura_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_logo"
        app:layout_constraintVertical_bias="0.178">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:fontFamily="@font/sf_ui_semibold"
            android:textSize="16dp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/form_first_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="text"
            android:fontFamily="@font/sf_ui_light"
            android:textSize="13dp"
            android:background="@drawable/form_edit_background"
            android:hint="@string/form_first_name"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />

        <EditText
            android:id="@+id/form_last_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="text"
            android:fontFamily="@font/sf_ui_light"
            android:textSize="13dp"
            android:background="@drawable/form_edit_background"
            android:hint="@string/form_last_name"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />

        <EditText
            android:id="@+id/form_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/sf_ui_light"
            android:textSize="13dp"
            android:background="@drawable/form_edit_background"
            android:hint="@string/form_email"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />

        <EditText
            android:id="@+id/form_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:fontFamily="@font/sf_ui_light"
            android:textSize="13dp"
            android:background="@drawable/form_edit_background"
            android:hint="@string/form_password"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="10dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_ui_heavy"
            android:background="@drawable/form_submit_button"
            android:text="@string/register_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_form">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_login_button" />

        <TextView
            android:id="@+id/switch_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:fontFamily="@font/sf_ui_heavy"
            android:textColor="@color/white"
            android:text="@string/connect_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>