<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:id="@+id/layout_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sf_ui_bold"
            android:text="@string/account_label"
            android:textColor="@color/lighter_black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"
            android:text="@string/form_last_name"
            android:textColor="@color/lighter_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/name_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.49"
            android:fontFamily="@font/sf_ui_medium"
            android:textColor="@color/lighter_black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_medium"
            android:text="@string/form_email"
            android:textColor="@color/lighter_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.49"
            android:fontFamily="@font/sf_ui_medium"
            android:textColor="@color/lighter_black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/eval_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_medium"
            android:text="@string/account_eval"
            android:textColor="@color/lighter_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/eval_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.49"
            android:fontFamily="@font/sf_ui_medium"
            android:textColor="@color/lighter_black"
            android:textSize="14dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_disconnect_button"
        android:fontFamily="@font/sf_ui_heavy"
        android:text="@string/account_disconnect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_account_info"
        app:layout_constraintVertical_bias="0.9"
        />


</androidx.constraintlayout.widget.ConstraintLayout>