<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant.RestaurantActivity">

    <ImageView
        android:id="@+id/restaurant_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp" >

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lighter_black"
            android:text="Default Restaurant Name"
            android:textSize="16dp"
            android:fontFamily="@font/sf_ui_heavy"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_type"
            android:textColor="@color/lighter_black"
            android:text="Snack/Food • Confort food"
            android:textSize="12dp"
            android:fontFamily="@font/sf_ui_light" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/restaurant_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:drawableLeft="@drawable/ic_icon_pin"
                    android:fontFamily="@font/sf_ui_light"
                    android:text="5.5km"
                    android:textColor="@color/lighter_black"
                    android:textSize="12dp" />

                <RatingBar
                    android:id="@+id/restaurant_reviews"
                    style="@style/KungryTheme.RatingBarSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="5"
                    android:theme="@style/KungryTheme.RatingBarSmall" />

                <TextView
                    android:id="@+id/restaurant_review_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sf_ui_light"
                    android:paddingLeft="3dp"
                    android:paddingTop="1dp"
                    android:text="(351)"
                    android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/restaurant_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_edit_background"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_ui_light"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="This is the phone number"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/restaurant_website"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_edit_background"
                android:drawableLeft="@drawable/ic_link"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_ui_light"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="This is the website"
                android:textSize="13dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/open_hours"
                android:textSize="13dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="7.5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10sp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/monday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/monday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16.27dp"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/tuesday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/monday" />

                <TextView
                    android:id="@+id/tuesday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/monday_hours" />

                <TextView
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/wednesday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tuesday" />

                <TextView
                    android:id="@+id/wednesday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tuesday_hours" />

                <TextView
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/thursday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wednesday" />

                <TextView
                    android:id="@+id/thursday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wednesday_hours" />

                <TextView
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/friday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/thursday" />

                <TextView
                    android:id="@+id/friday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thursday_hours" />

                <TextView
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/saturday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friday" />

                <TextView
                    android:id="@+id/saturday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/friday_hours" />

                <TextView
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/sf_ui_semibold"
                    android:text="@string/sunday"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saturday" />

                <TextView
                    android:id="@+id/sunday_hours"
                    style="@style/KungryTheme.RatingBarMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16.27dp"
                    android:stepSize="1"
                    android:isIndicator="false"
                    android:text="Fermé"
                    android:theme="@style/KungryTheme.RatingBar"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/saturday_hours" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Voir plus d'évaluations"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_eye_icon"
        android:drawablePadding="5dp"
        android:fontFamily="@font/sf_ui_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>